# dindexer

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  cscope_gen.sh  dindexer.sql  dindexer.sql.in  dindexer.yml  dindexer_cmd_complete.sh.in  dindexerrc.yml  drone_configuration  find_duplicate_files.sql  flat_git.yml
action_skel_code/: CMakeLists.txt  commandline.cpp  commandline.hpp  main.cpp
cmake/Modules/: Buildlibpqtypes.cmake  FindCryptoPP.cmake  Findblkid.cmake  Findsqlite3.cmake  TargetArch.cmake  WithMediaAutodetect.cmake  gccversion.cmake  set_switchable.cmake  shared_git_project.cmake  timestamp.cmake
docs/: hiredis_libev_multithread.md
docs/posts/: 01_my_new_project_dindexer.md  02_untitled.md  03_dindexer_v015b_released.md  03_v015b_released.md  04_whats_cooking.md
include/backends/: backend_loader.hpp  backend_version.hpp  db_backend.hpp  exposed_functions.hpp
include/dindexer-common/: cmake_on_off.h  commandline.hpp  common_info.hpp  mediatypes.hpp  readline_wrapper.hpp  settings.hpp  split_tags.hpp  validationerror.hpp
include/dindexer-core/: searchpaths.hpp  split.hpp  split_tags.hpp
include/dindexer-machinery/: filesearcher.hpp  filestats.hpp  guess_content_type.hpp  (+9 more)
lib/glob2regex/: CMakeLists.txt
lib/glob2regex/include/glob2regex/: exceptions.hpp  glob2regex.hpp
lib/glob2regex/src/: exceptions.cpp  glob2regex.cpp  glob_ast.cpp  glob_ast.hpp  glob_node_structs.hpp  render_ast.cpp  render_ast.hpp
lib/pbl/: CMakeLists.txt
src/: commandline.cpp  dbbackend.cpp  dbbackend.hpp  dindexerConfig.h.in  filesearcher.cpp  filesearcher.hpp  gitinfo.h.in  indexer.cpp  indexer.hpp  main.cpp  pathname.cpp  pathname.hpp  stringpool.hpp  stringpool.inl  tiger.c  tiger.cpp  tiger.h  tiger.hpp
src/backends/: CMakeLists.txt  backend_loader.cpp
src/backends/postgresql/: CMakeLists.txt  backend_postgresql.cpp  backend_postgresql.hpp  backend_postgresql_config.h.in  create_tables.cpp  create_tables.hpp  create_tables_query.h  dbsource.cpp  dbsource.hpp  delete.cpp  delete.hpp  flatinsertin2dlist.hpp  flatinsertin2dlist.inl  locate.cpp  locate.hpp  navigate.cpp  navigate.hpp  query_count_limit.hpp  scan.cpp  scan.hpp  tag.cpp  tag.hpp
src/backends/redis/: CMakeLists.txt  arg_to_bin_safe.hpp  async_connection.cpp  backend_redis.cpp  backend_redis.hpp  batch.cpp  batch.hpp  command.cpp  command.hpp  dele_tag_if_in_set.lua  delete.cpp  delete.hpp  find.cpp  find.hpp  incredis.cpp  incredis.hpp  incredis_batch.cpp  incredis_batch.hpp  record_data_adapt.hpp  redisConfig.h.in  reply.cpp  reply.hpp  scan_iterator.cpp  scan_iterator.hpp  scan_iterator.inl  script.cpp  script.hpp  script_manager.cpp  script_manager.hpp  tag.cpp  tag.hpp  tag_if_in_set.lua
src/backends/redis/lua/: dele_hash.lua  dele_tag_if_in_set.lua
src/backends/sqlite/: CMakeLists.txt  backend_sqlite.cpp  backend_sqlite.hpp  db_functions.cpp  db_functions.hpp  time_t_to_timestamp.cpp  time_t_to_timestamp.hpp
src/common/: CMakeLists.txt  commandline.cpp  common_info.cpp  mediatypes.cpp  readline_wrapper.cpp  settings.cpp  split_tags.cpp  validationerror.cpp
src/core/: CMakeLists.txt  searchpaths.cpp  split.cpp  split_tags.cpp
src/delete/: CMakeLists.txt  commandline.cpp  commandline.hpp  main.cpp  postgre_delete.cpp  postgre_delete.hpp
src/gui/: CMakeLists.txt  dindexer-guiConfig.h.in  icon_provider.cpp  icon_provider.hpp  main.cpp  reslist.qrc  reslist.qrc.in  result_list_model.cpp  result_list_model.hpp  searcher.cpp  searcher.hpp
src/gui/qml/: FileList.qml  mainwin.qml
src/incredis/: CMakeLists.txt  arg_to_bin_safe.hpp  async_connection.cpp  async_connection.hpp  batch.hpp  command.cpp  command.hpp  incredis.cpp  incredisConfig.h.in  incredis_batch.cpp  incredis_batch.hpp  reply.cpp  scan_iterator.cpp  scan_iterator.hpp  script.cpp  script.hpp  script_manager.cpp  script_manager.hpp
src/locate/: CMakeLists.txt  commandline.cpp  commandline.hpp  hash.cpp  hash.hpp  main.cpp  postgre_locate.cpp  postgre_locate.hpp
src/machinery/: CMakeLists.txt  discinfo.cpp  discinfo.hpp  filesearcher.cpp  filestats.hpp  globbing.cpp  globbing.hpp  guess_content_type.cpp  indexer.cpp  machineryConfig.h.in  machinery_info.cpp  make_filerecord_tree.cpp  mediatype.cpp  mediatypes.cpp  mimetype.cpp  mimetype.hpp  pathname.cpp  pathname.hpp  set_listing.cpp  stringpool.hpp  stringpool.inl  tiger.c  tiger.cpp
src/machinery/scantask/: contenttype.cpp  dirtree.cpp  hashing.cpp  mediatype.cpp  mime.cpp  setbasic.cpp  singlefile.cpp
src/main/: CMakeLists.txt  builtin_feats.c  builtin_feats.h  damerau_levenshtein.c  damerau_levenshtein.h  findactions.c  findactions.h  main.c  pbl_wrapper.h  timestamp.h.in  utf8_ops.c  utf8_ops.h
src/navigate/: AutomemBase.hpp  AutomemBase.inl  CMakeLists.txt  IteratorOnPtr.hpp  MaxSizedArray.hpp  MaxSizedArray.inl  commandline.hpp  commandprocessor.cpp  commandprocessor.hpp  dbsource.cpp  dbsource.hpp  dirmanager.cpp  dirmanager.hpp  entrypath.cpp  entrypath.hpp  flatinsertin2dlist.hpp  flatinsertin2dlist.inl  genericpath.cpp  genericpath.hpp  linereader.cpp  linereader.hpp  listdircontent.cpp  listdircontent.hpp  main.cpp
src/pq/: CMakeLists.txt  connection.cpp  connection.hpp  databaseexception.cpp  pq_type_helpers.cpp  resultinfo.hpp  resultset.cpp
src/scan/: CMakeLists.txt  commandline.cpp  commandline.hpp  dbbackend.cpp  dbbackend.hpp  discinfo.cpp  discinfo.hpp  indexer.cpp  indexer.hpp  main.cpp  mediatype.cpp  mediatype.hpp  mimetype.cpp  mimetype.hpp  pathname.cpp  settings.cpp  tiger.cpp  tiger.hpp
src/tag/: CMakeLists.txt  commandline.cpp  main.cpp  split_tags.cpp  split_tags.hpp  tag_postgres.cpp  tag_postgres.hpp
src/update/: CMakeLists.txt  commandline.cpp  indexer.cpp  tiger.c
test/unit/: CMakeLists.txt  test_diriterator.cpp  test_glob2regex.cpp  test_guess_content_type.cpp  test_lexical_cast.cpp  test_make_filerecord_tree.cpp  test_pathname.cpp  test_tiger_string_conv.cpp
test/unit_cli/: CMakeLists.txt  test_damerau_levenshtein.cpp  test_tag_splitting.cpp
tools/: cmake_default  export_compile_commands  flat_git.rb
(+43 files in other folders)
